--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 - Add a background to read journal entries against.
+- Add a proper game over screen (and splash).
 - Add sound effects.
 - More balancing.
 - Achievements.
