--- a/TODO
+++ b/TODO
@@ -1,6 +1,3 @@
-- Add a background to read journal entries against.
-- Add a proper game over screen (and splash).
-- Add sound effects.
-- More balancing.
+- More features.
 - Achievements.
 - Stats.
